mainfests/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: vote
    tier: front
  name: vote
spec:
  replicas: 4
  selector:
    matchLabels:
      app: vote
  strategy: 
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 2
  template:
    metadata:
      labels:
        app: vote
        tier: front
    spec:
      containers:
      - image: 484907514740.dkr.ecr.ap-southeast-1.amazonaws.com/vote:prod
        name: vote
        imagePullPolicy: Always
        resources: 
          requests:
            cpu: "50m"
            memory: "64Mi"
          limits: 
            cpu: "250m"
            memory: "128Mi"
